--- a/ramcoin-service.yaml
+++ b/ramcoin-service.yaml
@@ -1,43 +1,11 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: worker
-spec:
-  replicas: 4
-  selector:
-    matchLabels:
-      app: worker
-  template:
-    metadata:
-      labels:
-        app: worker
-    spec:
-      containers:
-      - name: worker
-        image: 127.0.0.1:30000/worker:v0.1
-        ports:
-          - name: http-port
-            containerPort: 80
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: redis
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
+apiVersion: v1 
+kind: Service 
+metadata:  
+  name: redis 
+spec:  
+  ports:    
+    - port: 6379      
+      protocol: TCP      
+      targetPort: 6379  
+  selector:    
       app: redis
-  template:
-    metadata:
-      labels:
-        app: redis
-    spec:
-      containers:
-      - name: redis
-        image: redis
-        ports:
-          - name: http-port
-            containerPort: 6379
