Changed Dockerfile to use Hasher.py

--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -1,8 +1,5 @@
-FROM ruby:alpine
-RUN apk update
-RUN apk add --update build-base curl
-RUN gem install sinatra
-RUN gem install thin
-ADD hasher.rb /
-CMD ["ruby", "hasher.rb"]
+FROM python:alpine
+RUN pip install Flask
+COPY rng.py /
+CMD ["python", "rng.py"]
 EXPOSE 80
