--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:alpine
 RUN pip install Flask
-COPY rng.py /
-CMD ["python", "rng.py"]
+COPY hasher.py /
+CMD ["python", "hasher.py"]
 EXPOSE 80
