--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:alpine
 RUN pip install Flask
-RUN pip install hashlib
+RUN pip easy_install hashlib
 COPY hasher.py /
 CMD ["python", "hasher.py"]
 EXPOSE 80
