--- a/webui/Dockerfile
+++ b/webui/Dockerfile
@@ -3,7 +3,7 @@ FROM node:4-slim
 RUN npm install express
 RUN npm install redis@3
 
-COPY files/ /files/
-COPY webui.js /
+COPY webui/files/ /files/
+COPY webui/webui.js /
 CMD ["node", "/webui.js"]
 EXPOSE 80
