--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -3,6 +3,6 @@ RUN apk update
 RUN apk add --update build-base curl
 RUN gem install sinatra
 RUN gem install thin
-ADD hasher.rb /
+ADD hasher/hasher.rb /
 CMD ["ruby", "hasher.rb"]
 EXPOSE 80
