--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -1,8 +1,6 @@
-FROM ruby:alpine
-RUN apk update
-RUN apk add --update build-base curl
-RUN gem install sinatra
-RUN gem install thin
-ADD hasher/hasher.rb /
-CMD ["ruby", "hasher.rb"]
+FROM python:alpine
+RUN pip install Flask
+
+COPY hasher.py /
+CMD ["python", "hasher.py"]
 EXPOSE 80
