added more installs to Dockerfile

--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:alpine
 RUN pip install Flask
+pip install --upgrade setuptools
+pip install ez_setup
 Run pip install hashlib
 COPY hasher.py /
 CMD ["python", "hasher.py"]
