--- a/hasher/Dockerfile
+++ b/hasher/Dockerfile
@@ -3,6 +3,6 @@ RUN pip install Flask
 RUN pip install --upgrade setuptools
 RUN pip install ez_setup
 
-COPY hasher.py /
+COPY hasher/hasher.py /
 CMD ["python", "hasher.py"]
 EXPOSE 80
