--- a/ramcoin.yml
+++ b/ramcoin.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: webui
-        image: clnodevm020-1.clemson.cloudlab.us:30080/webui:v0.1
+        image: 130.127.132.209:30000/webui:v0.1
         ports:
           - name: http-port
             containerPort: 80
