--- a/ramcoin-service.yml
+++ b/ramcoin-service.yml
@@ -7,6 +7,9 @@ spec:
   ports:
     - port: 80
       targetPort: 80
+    - name: http
+      port: 443
+      targetPort: http
       nodePort: 30080
   selector:
     app: webui
