--- a/ramcoin-service.yml
+++ b/ramcoin-service.yml
@@ -6,10 +6,7 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-    - name: http
-      port: 443
-      targetPort: http
       nodePort: 30080
   selector:
     app: webui
-  type: NodePort
+  type: NodePort/LoadBalancer
