--- a/ramcoin-service.yml
+++ b/ramcoin-service.yml
@@ -3,10 +3,13 @@ kind: Service
 metadata:
   name: webui
 spec:
+  type: NodePort
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: 80
+    - name: https
+      port: 443
       nodePort: 30080
   selector:
     app: webui
-  type: NodePort/LoadBalancer
