--- a/ramcoin-service.yml
+++ b/ramcoin-service.yml
@@ -5,9 +5,9 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - name: http
+    - protocol: TCP
       port: 80
-      targetPort: 80
+      targetPort: 8080
       nodePort: 30080
   selector:
     app: webui
