--- a/ramcoin.yml
+++ b/ramcoin.yml
@@ -16,3 +16,6 @@ spec:
       containers:
       - name: webui
         image: 127.0.0.1:30000/webui:v0.1
+        ports:
+          - name: http-port
+            containerPort: 80
