--- a/ramcoin-service.yml
+++ b/ramcoin-service.yml
@@ -7,6 +7,7 @@ spec:
   selector:
     app: webui
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 8080
       nodePort: 30080
