--- a/ramcoin.yml
+++ b/ramcoin.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: worker
-        image: 127.0.0.1:30000/worker:v0.1
+        image: DOCKER_USER/DOCKER_APP:BUILD_NUMBER
         ports:
           - name: http-port
             containerPort: 80
