--- a/webui-service.yml
+++ b/webui-service.yml
@@ -4,10 +4,9 @@ metadata:
   name: webui
 spec:
   type: NodePort
+  ports:
+    - port: 80
+      targetPort: 80
+      nodePort: 30080
   selector:
     app: webui
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
-      nodePort: 30080
